--- a/conf/app.ini
+++ b/conf/app.ini
@@ -2,7 +2,7 @@
 PageSize = 10
 JwtUserSecret = UnL1I5gtaV3AT1P4UMEhA4BNL1mUQAeOVjutN7w
 JwtAdminSecret = mF1KnaiIYdbuDUy3XZr674TQteARvlPMfx8SWEk
-PrefixUrl = ackdev-otel-demo.srv.deeproute.cn
+PrefixUrl = http://127.0.0.1:8000
 RuntimeRootPath = runtime/
 LogSavePath = logs/
 
